# AMBER

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
AMBER/: __init__.py  classification.py  distances.py  features.py  iterativesom.py  map.py  temporal_analysis.py  temporal_map.py  visualization.py
docs/: api.rst  conf.py  getting_started.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
docs/_static/: custom.css
docs/html/: api_reference.html  changelog.html  contributing.html  index.html  installation.html  style.css  user_guide.html
examples/: ablation_study.ipynb  benchmark_som_libraries.py  cbf_dtw_example.py  colors_example.ipynb  library_comparison.ipynb  rsom_validation.ipynb
examples/data/: norm.nao.monthly.b5001.current.ascii  norm.pna.monthly.b5001.current.ascii
tests/: conftest.py  test_classification.py  test_distances.py  test_features.py  test_integration.py  test_iterativesom.py  test_map.py  test_temporal_analysis.py  test_temporal_map.py  test_visualization.py
