[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amber-som"
version = "2.1.0"
description = "Open-source Python library for Self-Organizing Maps (SOMs)"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    {name = "Alberto Nogales", email = "alberto.nogales@uah.es"},
    {name = "Álvaro José García-Tejedor"},
]
requires-python = ">=3.9"
keywords = [
    "self-organizing-map", "SOM", "kohonen", "unsupervised-learning",
    "clustering", "neural-network", "time-series", "biosignals", "EEG",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "plotly>=5.0",
    "tqdm>=4.0",
    "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://github.com/albertonogales/AMBER"

[project.optional-dependencies]
spectral = ["scipy>=1.7"]
mfcc = ["librosa>=0.9"]
dev = [
    "scipy>=1.7",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # line-length handled above

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true
